--- a/package.json
+++ b/package.json
@@ -5,31 +5,32 @@
   "version": "0.1.0",
   "author": "willjw3 <https://github.com/willjw3>",
   "dependencies": {
-    "@emotion/core": "^10.0.22",
-    "bootstrap": "^4.3.1",
-    "emotion": "^10.0.23",
-    "gatsby": "^2.18.2",
-    "gatsby-image": "^2.2.33",
-    "gatsby-plugin-emotion": "^4.1.15",
+    "@emotion/core": "^10.0.35",
+    "bootstrap": "^4.5.2",
+    "emotion": "^10.0.27",
+    "gatsby": "^2.24.47",
+    "gatsby-image": "^2.4.16",
+    "gatsby-plugin-emotion": "^4.3.10",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-manifest": "^2.2.29",
     "gatsby-plugin-offline": "^2.2.10",
-    "gatsby-plugin-react-helmet": "^3.1.15",
-    "gatsby-plugin-sharp": "^2.3.2",
-    "gatsby-remark-prismjs": "^3.3.24",
-    "gatsby-remark-responsive-iframe": "^2.2.27",
-    "gatsby-source-filesystem": "^2.1.38",
-    "gatsby-transformer-remark": "^2.6.37",
+    "gatsby-plugin-react-helmet": "^3.3.10",
+    "gatsby-plugin-sharp": "^2.6.40",
+    "gatsby-remark-images": "^3.3.33",
+    "gatsby-remark-prismjs": "^3.5.10",
+    "gatsby-remark-responsive-iframe": "^2.4.12",
+    "gatsby-source-filesystem": "^2.3.24",
+    "gatsby-transformer-remark": "^2.8.28",
     "gatsby-transformer-sharp": "^2.3.5",
-    "lodash": "^4.17.15",
-    "prismjs": "^1.17.1",
+    "lodash": "^4.17.20",
+    "prismjs": "^1.21.0",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-bootstrap": "^1.0.0-beta.16",
+    "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
     "react-custom-share": "^0.4.8",
-    "react-dom": "^16.12.0",
+    "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1",
-    "react-icons": "^3.8.0"
+    "react-icons": "^3.10.0"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
