--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gatsby": "^2.24.47",
     "gatsby-image": "^2.4.16",
     "gatsby-plugin-emotion": "^4.3.10",
+    "gatsby-plugin-gdpr-cookies": "^1.0.7",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-manifest": "^2.2.29",
     "gatsby-plugin-offline": "^2.2.10",
@@ -20,8 +21,10 @@
     "gatsby-remark-prismjs": "^3.5.10",
     "gatsby-remark-responsive-iframe": "^2.4.12",
     "gatsby-source-filesystem": "^2.3.24",
+    "gatsby-telemetry": "^1.3.38",
     "gatsby-transformer-remark": "^2.8.28",
     "gatsby-transformer-sharp": "^2.3.5",
+    "js-cookie": "^2.2.1",
     "lodash": "^4.17.20",
     "prismjs": "^1.21.0",
     "prop-types": "^15.7.2",
